[metadata]
name = tiedpyranges
version = 0.1.1
author = Marco Mariotti
author_email = marco.mariotti.mm@gmail.com
description = Extends the pyranges module with operations on joined genomic intervals (e.g. exons of same transcript)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/marco-mariotti/tiedpyranges
project_urls =
https://github.com/marco-mariotti
    Github Website=https://github.com/marco-mariotti/tiedpyranges

classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
    pandas >=1.2
    pyranges >=0.0.99
    pyfaidx  >=0.6

[options.packages.find]
where = src
